@@ -37,6 +37,7 @@ IaC/CICD
 
 Document
 - DOC_ADAPTER_V1
+- DOC_FORMAT_MISMATCH
 - DOC_ACTIVE_CONTENT_PRESENT
 - DOC_EMBEDDED_OBJECT_PRESENT
 - DOC_EXTERNAL_LINK_PRESENT
